--- a/proyecto/src/main/resources/application.properties
+++ b/proyecto/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:h2:file:~/tiendabd
+spring.datasource.username=user
+spring.datasource.password=user
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
