--- a/proyecto/src/main/resources/application.properties
+++ b/proyecto/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:~/tiendabd
+spring.datasource.url=jdbc:h2:file:~/tiendaDb
 spring.datasource.username=user
 spring.datasource.password=user
 spring.jpa.hibernate.ddl-auto=update
